--- a/Paginas Web/Evento Startups/CSS/Styles2.css
+++ b/Paginas Web/Evento Startups/CSS/Styles2.css
@@ -1,8 +1,9 @@
-.all{
+.all {
     display: grid;
     min-height: 100dvh;
     grid-template-rows: auto lfr auto;
 }
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -13,21 +14,24 @@ body {
 header {
     background-color: #4CAF50;
     color: white;
-   
+
 
 }
-.lista-objetivos{
+
+.lista-objetivos {
     padding-left: 2%;
 }
+
 .imagen-objetivo {
     width: 15%;
     height: auto;
     padding-left: 2%;
 }
+
 .imagen-ods {
-    width: 30%; 
+    width: 30%;
     height: auto;
-    display: flex; 
+    display: flex;
 }
 
 header ul {
@@ -38,12 +42,15 @@ header ul {
     color: #fff;
 
 }
-#Sostenibilidad{
+
+#Sostenibilidad {
     color: #d30000;
 }
-header a{
+
+header a {
     text-decoration: none;
 }
+
 header li {
     text-decoration: none;
     display: inline;
@@ -51,11 +58,13 @@ header li {
     color: #000000;
 
 }
-header{
+
+header {
     width: 100%;
     height: 100%;
 }
-header h1{
+
+header h1 {
     margin-top: 1%;
 }
 
@@ -65,11 +74,16 @@ main {
     margin-bottom: 10%;
 }
 
-h1, h2 {
+h1,
+h2 {
     color: #333;
 }
 
-#descripcion, #actividades, #inscripcion, #ods, #conceptos {
+#descripcion,
+#actividades,
+#inscripcion,
+#ods,
+#conceptos {
     margin-bottom: 2em;
 }
 
@@ -120,6 +134,6 @@ form button:hover {
     background-color: #45a049;
 }
 
-footer{
+footer {
     background-color: #4CAF50;
 }
