--- a/Paginas Web/Evento Startups/CSS/Styles3.css
+++ b/Paginas Web/Evento Startups/CSS/Styles3.css
@@ -1,8 +1,9 @@
-.all{
+.all {
     display: grid;
     min-height: 100dvh;
     grid-template-rows: auto lfr auto;
 }
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -13,7 +14,7 @@ body {
 header {
     background-color: #4CAF50;
     color: white;
-   
+
 
 }
 
@@ -25,12 +26,15 @@ header ul {
     color: #fff;
 
 }
-#Contacto{
+
+#Contacto {
     color: #d30000;
 }
-header a{
+
+header a {
     text-decoration: none;
 }
+
 header li {
     text-decoration: none;
     display: inline;
@@ -38,11 +42,13 @@ header li {
     color: #000000;
 
 }
-header{
+
+header {
     width: 100%;
     height: 100%;
 }
-header h1{
+
+header h1 {
     margin-top: 1%;
 }
 
@@ -52,11 +58,16 @@ main {
     margin-bottom: 10%;
 }
 
-h1, h2 {
+h1,
+h2 {
     color: #333;
 }
 
-#descripcion, #actividades, #inscripcion, #ods, #conceptos {
+#descripcion,
+#actividades,
+#inscripcion,
+#ods,
+#conceptos {
     margin-bottom: 2em;
 }
 
@@ -107,6 +118,6 @@ form button:hover {
     background-color: #45a049;
 }
 
-footer{
+footer {
     background-color: #4CAF50;
 }
