--- a/Paginas Web/Practica 1/css/styles2.css
+++ b/Paginas Web/Practica 1/css/styles2.css
@@ -1,13 +1,14 @@
-body{
+body {
     margin: 0px;
 
 }
-header h1{
+
+header h1 {
     text-align: center;
     margin-bottom: 5%;
 }
 
-header{
+header {
     background-color: rgb(208, 248, 235);
     margin-top: -25px;
 }
@@ -23,31 +24,36 @@ table {
 
 
 }
-th , td{
+
+th,
+td {
     border: 2px solid #000000;
     padding: 8px;
 }
 
-th{
+th {
     background-color: #464646;
     color: white;
 }
 
-.Versiones{
+.Versiones {
     background-color: #464646;
     color: white;
 }
-footer{
+
+footer {
     background-color: rgb(208, 248, 235);
     margin-top: 29%;
     height: 48px;
-   
+
 
 }
-.autor{
+
+.autor {
 
     text-align: center;
 }
+
 .pagina3 {
     position: absolute;
     text-decoration: none;
@@ -60,7 +66,7 @@ footer{
 
 }
 
-.pagina3:hover{
+.pagina3:hover {
     filter: saturate(180%);
     transition: width 3s;
 }
@@ -76,7 +82,7 @@ footer{
 
 }
 
-.pagina1:hover{
+.pagina1:hover {
     filter: saturate(180%);
     transition: width 3s;
 }
